exports[`<Error /> default should render an Error element with only the required props 1`] = `
<Box
  alignItems="center"
  backgroundColor="#ff324d"
  boxSize={
    Object {
      "horizontal": "medium",
    }
  }
  pad="small">
  <Paragraph
    color="white"
    margin="medium"
    size="large"
    textAlign="center">
    Mock error message
  </Paragraph>
</Box>
`;

exports[`<Error /> default should render an Error element with other props 1`] = `
<Box
  alignItems="center"
  backgroundColor="#ff324d"
  boxSize={
    Object {
      "horizontal": "medium",
    }
  }
  onClick={[Function]}
  pad="small">
  <Paragraph
    color="white"
    margin="medium"
    size="large"
    textAlign="center">
    Mock error message
  </Paragraph>
</Box>
`;
